--- a/main.css
+++ b/main.css
@@ -37,3 +37,38 @@ hr
 {
   clear: left;
 }
+
+.commentary .base{
+  position: relative;
+  border-bottom: 1px dotted black;
+}
+
+.commentary .tooltip {
+  visibility: hidden;
+  width: 60%;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  left: 10%;
+  margin-top: 1.2%;
+  margin-left: -60px;
+}
+
+.commentary .tooltip::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 2%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent black transparent;
+}
+
+.commentary:hover .tooltip {
+  visibility: visible;
+}
