--- a/main.css
+++ b/main.css
@@ -14,6 +14,17 @@
   font-size:80%;
 }
 
+.value
+{
+  font-weight: bold;
+}
+
+.UpdateLink
+{
+  font-weight: bold;
+  color: black;
+}
+
 hr
 {
   clear: left;
