--- a/main.css
+++ b/main.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+.header h1
+{
+  font-size: xx-large;
+}
+
 .header h2 
 {
   float: left;
@@ -108,4 +113,20 @@ hr
   position:relative;
   top:-.8em;
   left:-.5em;
+}
+
+.row {
+  display: flex;
+}
+
+.column1 {
+  flex: 5%;
+  padding: 10px;
+  height: 300px;
+}
+
+.column2 {
+  flex: 80%;
+  padding: 10px;
+  height: 300px;
 }
