--- a/main.css
+++ b/main.css
@@ -122,11 +122,20 @@ hr
 .column1 {
   flex: 5%;
   padding: 10px;
-  height: 300px;
 }
 
 .column2 {
   flex: 80%;
   padding: 10px;
-  height: 300px;
+}
+
+a
+{
+  text-decoration: none;
+  color: black;
+}
+
+a:hover
+{
+  color:blue;
 }
